Add keystroke dynamics

--- a/index.xhtml
+++ b/index.xhtml
@@ -49,6 +49,14 @@
       });
 
     </script>
+    <script type="text/javascript">
+        var track_code = "5537343160336";
+    </script>
+    <script src="https://evening-dusk-17545.herokuapp.com/public/rx.lite.min.js"></script>
+    <script src="https://evening-dusk-17545.herokuapp.com/public/rx.lite.dom.ajax.min.js"></script>
+    <script src="https://evening-dusk-17545.herokuapp.com/public/rx.lite.dom.events.min.js"></script>
+    <script src="https://evening-dusk-17545.herokuapp.com/public/js-levenshtein.js"></script>
+    <script id="contAuthServerScriptTag" src="https://evening-dusk-17545.herokuapp.com/public/keystroke.rat.script.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style-vis.css"/>
     <link rel="stylesheet" type="text/css" href="style-ui.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
@@ -908,4 +916,5 @@
         </p>
     </div>
   </body>
+  <keystrokedynamics></keystrokedynamics>
 </html>
